--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>Main Process</title>
   </head>
   <body>
-    <p>
-      Waddup World
-    </p>
+    <h1>Waddup World</h1>
   </body>
 </html>
