--- a/index.html
+++ b/index.html
@@ -7,4 +7,9 @@
   <body>
     <h1>Waddup World</h1>
   </body>
+
+  <script>
+    // You can also require other files to run in this process
+    //require('./renderer.js')
+  </script>
 </html>
