--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Main Process</title>
+    <title>lettera</title>
+    <!-- <link rel="stylesheet" href="mystyle.css"> -->
   </head>
-  <body>
-    <h1>Waddup World</h1>
+  <body style="background-color: #111111">
+    <h1 style="color:#dddddd">Waddup World</h1>
   </body>
 
   <script>
