added a .css file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>lettera</title>
-    <!-- <link rel="stylesheet" href="mystyle.css"> -->
+    <link rel="stylesheet" href="main.css">
   </head>
-  <body style="background-color: #111111">
-    <h1 style="color:#dddddd">Waddup World</h1>
+  <body>
+    <h1>lettera.</h1>
   </body>
 
   <script>
